--- a/solutions/argocd/python-manifests/deployment.yaml
+++ b/solutions/argocd/python-manifests/deployment.yaml
@@ -21,7 +21,7 @@ spec:
         app: python-helloworld
     spec:
       containers:
-      - image: riccardopixel/python-helloworld:latest
+      - image: riccardopixel/python-helloworld:v1.1.0
         imagePullPolicy: IfNotPresent
         name: python-helloworld
         resources:
