--- a/exercises/helm/values-staging.yaml
+++ b/exercises/helm/values-staging.yaml
@@ -1,17 +1,21 @@
 namespace:
   name: staging
+
+service:
+  port: 8111
+  type: ClusterIP
  
 image:
   repository: nginx
   tag: 1.18.0
-  imagePullPolicy: ifNotPresent 
+  pullPolicy: ifNotPresent 
 
 replicaCount: 1
 
 resources:
   requests:
-    memory: "128Mi"
-    cpu: "50m"
+    memory: 128Mi
+    cpu: 50m
 
 spec:
   ports:
@@ -23,6 +27,5 @@ spec:
     tag: alpine
   type: ClusterIP
 
-data:
-  version: 1.18.0
-kind: ConfigMap
+configmap:
+  data: "versionL 1.18.0"
