--- a/exercises/helm/values.yaml
+++ b/exercises/helm/values.yaml
@@ -4,25 +4,18 @@ namespace:
 image:
   repository: nginx
   tag: alpine
-  imagePullPolicy: ifNotPresent 
+  pullPolicy: ifNotPresent 
 
 replicaCount: 3
 
 resources:
   requests:
-    memory: "256Mi"
-    cpu: "50m"
+    memory: 256Mi
+    cpu: 50m
 
-spec:
-  ports:
-  - port: 8111
-    protocol: TCP
-    targetPort: 8111
-  selector:
-    app: nginx
-    tag: alpine
+service:
+  port: 8111
   type: ClusterIP
 
-data:
-  version: alpine
-kind: ConfigMap
+configmap:
+  data: "version: alpine"
