--- a/exercises/manifests/templates/namespace.yaml
+++ b/exercises/manifests/templates/namespace.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    tier: test
-  name: demo
+    tier: test 
+  name: {{ .Values.namespace.name }} 
